# openai-agent-sdk-supervisor

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  scorers.py
.github/workflows/: run_on_schedule.yml
evals/: eval_math_agent.py  eval_research_agent.py  eval_supervisor.py  parameters.py
scripts/: retest_query.py  run_queries.py
src/: agent_graph.py  app.py  config.py  eval_server.py  helpers.py  local_runner.py
src/agents/: __init__.py  deep_agent.py  math_agent.py  research_agent.py
tests/: test_prompt_modification.py
